# algorithmic_coding

./: README.md  pyproject.toml
algorithmic_coding/classifiers/k_nearest_neighbors/: classic_implementation.py
algorithmic_coding/one_dimensional_arrays/bin_search/: iterative.py  recursive.py
algorithmic_coding/one_dimensional_arrays/binary_search/: iterative.py  iterative_solution.py  recursive.py  utils.py
algorithmic_coding/one_dimensional_arrays/max_consecutive_ones/: README.md  traversal_solution.py
algorithmic_coding/one_dimensional_arrays/max_diff_between_even_and_odd_counts/: README.md  traversal_solution.py
algorithmic_coding/one_dimensional_arrays/max_diff_min_count_partitions/: README.md  greedy_solution.py  greedy_solution_ver2.py  greedy_with_merge.py  traversal_solution.py
algorithmic_coding/one_dimensional_arrays/max_diff_odd_even_counts/: README.md  traversal_solution.py
algorithmic_coding/one_dimensional_arrays/max_product_triplet/: greedy_solution.py  naive_solution.py  sorting_solution.py
algorithmic_coding/one_dimensional_arrays/max_subarray/: README.md  divide_and_conquer.py  kadane_algorithm.py  naive_solution.py
algorithmic_coding/one_dimensional_arrays/merge_intervals/: README.md
algorithmic_coding/one_dimensional_arrays/smallest_pos_integer/: README.md  sorting_solution.py
algorithmic_coding/one_dimensional_arrays/smallest_positive_integer/: sorting_solution.py
docs/: Algorithmic_Coding_Problems_Practice.docx  Algorithmic_coding_questions.docx
(+10 files in other folders)
